# ems

.github/workflows/: server-ci.yaml
docs/: README.md
docs/energetika/: fve-zaklady.md
infrastructure/: .env.example  compose.yaml
server/: .gitignore  Dockerfile  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0ed5ee726992_add_role_to_users.py  385e354b592e_add_devices_pv_devices_and_battery_.py  4c8fec19d0e5_add_weather_fetch_log_table.py  4dd2aa16cd35_add_sites_and_site_memberships_tables.py  54913907321b_add_inverter_power_kw_to_pv_devices.py  764e6663ae93_add_refresh_token_table.py  85b2eef91534_add_ote_fetch_log_table.py  94ebc7bc64ee_add_first_name_and_last_name_to_users.py  a3f2f9835d36_add_latitude_and_longitude_check_.py  b73ca7d56fb2_add_users_table.py  c5e183f08d5a_add_appliances_table.py  e32d5709a202_use_timezone_aware_created_at.py  ec0f985b7b68_add_max_length_to_email_field_add_.py
server/src/: main.py
server/src/api/: router.py
server/src/appliances/: dependencies.py  enums.py  exceptions.py  forecast.py  models.py  repository.py  router.py  schemas.py  service.py
server/src/auth/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  security.py  service.py
server/src/core/: celery_app.py  config.py  database.py  exceptions.py  handlers.py  influxdb.py  logger.py  models_registry.py  schemas.py
server/src/devices/: dependencies.py  enums.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
server/src/ote/: client.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py  tasks.py
server/src/simulation/: dependencies.py  exceptions.py  pv_model.py  router.py  schemas.py  service.py
server/src/sites/: dependencies.py  enums.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
server/src/users/: dependencies.py  enums.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
server/src/weather/: client.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py  tasks.py
