[project]
name = "ems"
version = "0.1.0"
description = "Energy Management System API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = ["ruff>=0.15.20"]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [".venv", "__pycache__", ".ruff_cache"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes errors
    "I",     # isort
    "B",     # flake8-bugbear
    "N",     # naming conventions
    "Q",     # comprehension-related rules
    "UP",    # pyupgrade
    "ASYNC", # flake8-async,
    "RUF",   # ruff-specific rules
    "TC",    # flake8-type-checking
    "ANN",   # flake8-annotations
]
ignore = [
    "B008", # enables function calls within arguments (required for FastAPI Depends and Query)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
