[project]
name = "ems"
version = "0.1.0"
description = "Energy Management System API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "celery[redis]>=5.6.3",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "influxdb3-python>=0.20.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = ["pytest>=9.1.1", "pytest-asyncio>=1.4.0", "ruff>=0.15.20"]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [".venv", "__pycache__", ".ruff_cache"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes errors
    "I",     # isort
    "B",     # flake8-bugbear
    "N",     # naming conventions
    "S",     # security-related rules
    "D",     # docstring-related rules
    "C4",    # comprehension-related rules
    "UP",    # pyupgrade
    "TC",    # flake8-type-checking
    "PT",    # flake8-pytest-style
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
    "ANN",   # flake8-annotations
    "DTZ",   # flake8-datetimez
    "ASYNC", # flake8-async,
]
ignore = [
    "B008",   # enables function calls within arguments (required for FastAPI Depends and Query)
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D105",   # missing docstring in magic method
    "D107",   # missing docstring in __init__
    "D203",   # incompatible with D211 (no blank line before class docstring), which we use
    "D213",   # incompatible with D212 (summary on first line), which we use
    "ANN204", # missing type annotation for special method
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
